config/k8s/monitoring/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-network-policy
  namespace: monitoring
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: app
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
    - ports:
        - protocol: TCP
          port: 3000 # Grafana
        - protocol: TCP
          port: 9090 # Prometheus
        - protocol: TCP
          port: 3100 # Loki
        - protocol: TCP
          port: 2020 # Fluent-bit metrics
  egress:
    - to:
        - namespaceSelector: {} # Permite acesso a todos os namespaces
      ports:
        - protocol: TCP
          port: 3001 # App
        - protocol: TCP
          port: 5432 # Postgres
        - protocol: TCP
          port: 27017 # MongoDB
        - protocol: TCP
          port: 5672 # RabbitMQ
